--- a/css/estilo.css
+++ b/css/estilo.css
@@ -4,12 +4,14 @@
 }
 
 body {
+    border: 1px solid #b10333;
     font-family: "Trebuchet", Helvetica, sans-serif;
     background: #fff url(../img/fundo.png) repeat-x;
 }
 
 #container {
-    width: 700px;
+    border: 1px solid #b10333;
+    width: 750px;
     margin: 0 auto;
 }
 
@@ -22,7 +24,7 @@ body {
 .logo {
     width: 152px;
     height: 66px;
-    background: url(../img/logo.png) center;  
+    background: url(../img/logo.png) no-repeat center;  
     text-indent: -3000px;  
 }
 
@@ -73,4 +75,93 @@ body.fotos #Navegação-topo a#fotos
 { /*Selecionar a class home aplicada ao body, em seguida selecionar a navegação e o id home que está no link*/
     color: #fff;
     background: #de003e;
+}
+
+/*Configuração layout de três colunas*/
+
+#conteudo {
+    margin-top: 60px;
+    background: #f5f5f5;
+}
+
+/*A coluna primaria e secundaria terá largura de 270px, e a lateral terá 180px, 270+270+180=720, o container term 750px, sobram 30px para trabalhar no espaçamento, como será 3 colunas, 15 px de espaçamento entre colunas. (15+15=30px restante)*/
+
+
+/*A ordem ficaria primario>secundario>lateral, para colocarmos a lateral do lado esquerdo, devemos empurrar com a margin até a lateral dar a volta na página, como pode ser visto no código abaixo*/
+
+h2 {
+    font-size: 1.2em;
+    background: #294c71;
+    color: #fff;
+    padding: 5px;
+}
+
+#lateral {
+    width: 180px;
+    float: left;
+    margin: 0 0 20px -750px;
+}
+
+#lateral ul a {
+    text-decoration: none;
+    list-style: none;
+    padding: 10px 10px;
+    display: block;
+    color: black;
+    font-size: 0.9em;
+}
+
+#lateral ul a:hover {
+    text-decoration: none;
+    list-style: none;
+    padding: 10px 25px;
+    display: block;
+    color: rgb(97, 97, 97);
+    font-size: 0.9em;
+}
+
+.caixa { /*Criamos uma box de conteúdo pois todos serão iguais*/
+    margin: 10px 0;
+    padding: 5px;
+}
+
+.caixa-conteudo {
+    color: black;
+}
+
+#primario { /*O primario seguirá um padrão e as vertentes não precisa repetir as características padrões*/
+    width: 270px;
+    float: left;
+    margin: 0 0 20px 195px; /*195 para dar espaço para a coluna lateral que tem 180 + 15 de espaço entre elas*/
+}
+
+#duas-colunas #primario { /*o primario dentro do id duas colunas*/
+    width: 555px; /*Só altera a largura*/
+}
+
+/*duas coluna e uma coluna são as vertentes*/
+
+#uma-coluna #primario { /*o primario dentro do id duas colunas*/
+    width: 555px;
+    margin: 0 0 20px; /*Altera a largura e margin*/
+}
+
+
+
+#secundario {
+    width: 270px;
+    float: left;
+    margin: 0 0 20px 15px; /*Ordem de colocação: top > right > bottom > left*/
+}
+
+#container-rodape { 
+    background: #294c71;
+    padding: 20px;
+}
+
+#rodape {
+    width: 750px;
+    margin: 0 auto;
+    color: black;
+    font-size: 12px;
 }
